# MyTowerDefence

./: CMakeLists.txt  ubuntu-dependency-install.sh
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: a_start_pathfinder.c  a_start_pathfinder.h  creep.c  creep.h  game.c  game.h  gamestate.c  gamestate.h  graphic.c  graphic.h  main.c  map.c  map.h  mapRenderer.c  mapRenderer.h  menu.c  menu.h  menuRenderer.c  menuRenderer.h  tile.c  tile.h  tower.c  tower.h  util.c  util.h  vector.c  vector.h
